use the forbidden-apis policies corresponding to the JRE fix the forbidden apis issues
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1880866 13f79535-47bb-0310-9956-ffa450edef68